@@ -1,40 +1,33 @@
 if (!seantis) seantis = {};
 
-seantis.maplayer = function(id, url, title, letter, zoom) {
-    var kmlurl = url + '@@kml-document?letter=' + letter;
+ $(window).on('maploadend', function(e, widget){
 
-    var layer = new OpenLayers.Layer.Vector(title, {
-        protocol: new OpenLayers.Protocol.HTTP({
-            url: kmlurl,
-            format: new OpenLayers.Format.KML({
-                extractStyles: true,
-                extractAttributes: true
-            })
-        }),
-        strategies: [new OpenLayers.Strategy.Fixed()],
-        projection: cgmap.createDefaultOptions().displayProjection
-    });
+    var placemarks = (function(map) {
+        var result = [];
+        for(var i=0; i<map.layers.length; i++) {
+            if (typeof map.layers[i].attributes === 'undefined') continue;
+            if (typeof map.layers[i].attributes.is_placemark === 'undefined') continue;
 
-    var zoom_to = function(layer) {
-        layer.map.zoomToExtent(layer.getDataExtent());
-        if(layer.features.length>1){
-            layer.map.zoomTo(layer.map.getZoom()-1);
-        } else {
-            layer.map.zoomTo(layer.map.getZoom()-4);
+            result.push(map.layers[i]);
         }
-    };
+        return result;
+    })(widget.map);
 
-    var link_layer = function(layer, url) {
-        // this won't work on ie < 8
-        var placemark = $(document.getElementById(layer.id+'_root'));
+    var force_topmost = function(layer) {
+        var parent = document.getElementById(layer.id+'_vroot');
+        if (!parent) return;
 
-        if (placemark) {
-            placemark.css('cursor', 'pointer');
-            placemark.click(function() {
-                window.location = url;
-                return false;
-            });
-        }
+        // append the container holding the marker to the container holding
+        // all the markers, forcing it to show on top of the other markers (
+        // essentially what you would usually do with a z-index).
+
+        // SVG's render orders is defined solely through element order, which
+        // is why this is done like that, see:
+
+        // http://stackoverflow.com/questions/482115/
+        // with-javascript-can-i-change-the-z-index-layer-of-an-svg-g-element
+
+        parent.parentNode.parentNode.appendChild(parent.parentNode);
     };
 
     var pulsate = function(layer, start) {
@@ -67,23 +60,6 @@ seantis.maplayer = function(id, url, title, letter, zoom) {
     var set_attr = function(el, attr, val) {
         if (isNaN(val)) return;
         el.setAttribute(attr, val);
-    };
-
-    var force_topmost = function(layer) {
-        var parent = document.getElementById(layer.id+'_vroot');
-        if (!parent) return;
-
-        /* append the container holding the marker to the container holding
-        all the markers, forcing it to show on top of the other markers (
-        essentially what you would usually do with a z-index).
-
-        SVG's render orders is defined solely through element order, which
-        is why this is done like that, see:
-
-        http://stackoverflow.com/questions/482115/
-        with-javascript-can-i-change-the-z-index-layer-of-an-svg-g-element
-        */
-        parent.parentNode.parentNode.appendChild(parent.parentNode);
     };
 
     var pulseate_element = function(element) {
@@ -121,39 +97,103 @@ seantis.maplayer = function(id, url, title, letter, zoom) {
         };
     };
 
-    var highlight_target = function(layer, id) {
-        // this won't work on ie < 8
-        var el = document.getElementById(layer.id+'_root');
-        var placemark = $(el);
-        var target = $('#'+id + ', .'+id);
-
-        if (placemark && target) {
-            placemark.hover(
-                function() {
-                    target.toggleClass("groupSelection", true);
-                },
-                function() {
-                    target.toggleClass("groupSelection", false);
-                }
-            );
-
-            target.hover(
-                function() {
-                    force_topmost(layer);
-                    pulsate(layer, true);
-                },
-                function() {
-                    pulsate(layer, false);
-                }
-            );
-        }
+    var get_target = function(layer) {
+        var id = layer.attributes.target;
+        return $('#'+ id + ', .' + id);
     };
 
-    layer.events.on({"loadend":function(){
-        if (zoom) zoom_to(layer);
-        link_layer(layer, url);
-        highlight_target(layer, id);
-    }});
+    /* setup hover events for targets (results pointing at placemarks) */
+    var on_mouse_over_target = function() {
+        var layer = $(this).data('layer');
+        force_topmost(layer);
+        pulsate(layer, true);
+    };
+
+    var on_mouse_out_target = function() {
+        var layer = $(this).data('layer');
+        pulsate(layer, false);
+    };
+
+    var on_click_placemark = function() {
+        window.location = this.attributes.url;
+        return false;
+    };
+
+    for(var i=0; i<placemarks.length; i++) {
+        placemarks[i].attributes.target.hover(
+            on_mouse_over_target,
+            on_mouse_out_target
+        );
+    }
+
+    /* setup hover events for placemarks */
+    var hover_control = new OpenLayers.Control.SelectFeature(placemarks, {
+        hover: true,
+        highlightOnly: true,
+        renderIntent: 'temporary',
+        eventListeners: {
+            featurehighlighted: function(e) {
+                var layer = e.feature.layer;
+                layer.attributes.target.toggleClass('groupSelection', true);
+                
+                var marker = document.getElementById(layer.id + '_root');
+                marker.style.cursor = 'pointer';
+            },
+            featureunhighlighted: function(e) {
+                var layer = e.feature.layer;
+                layer.attributes.target.toggleClass('groupSelection', false);
+                document.body.style.cursor = 'default';
+
+                var marker = document.getElementById(layer.id + '_root');
+                marker.style.cursor = 'auto';
+            }
+        }
+    });
+
+    var click_control = new OpenLayers.Control.SelectFeature(placemarks, {
+        hover: false,
+        highlightOnly: true,
+        renderIntent: 'temporary',
+        eventListeners: {
+            featurehighlighted: function(e) {
+                var layer = e.feature.layer;
+                window.location = layer.attributes.url;
+            }
+        }
+    });
+
+    widget.map.addControl(hover_control);
+    widget.map.addControl(click_control);
+
+    hover_control.activate();
+    click_control.activate();
+
+});
+
+seantis.maplayer = function(id, url, title, letter, zoom) {
+    var kmlurl = url + '@@kml-document?letter=' + letter;
+
+    var layer = new OpenLayers.Layer.Vector(title, {
+        protocol: new OpenLayers.Protocol.HTTP({
+            url: kmlurl,
+            format: new OpenLayers.Format.KML({
+                extractStyles: true,
+                extractAttributes: true
+            })
+        }),
+        strategies: [new OpenLayers.Strategy.Fixed()],
+        projection: new OpenLayers.Projection("EPSG:4326")
+    });
+
+    layer.attributes = {
+        'is_placemark': true,
+        'target_id': id,
+        'target': $('#'+ id + ', .' + id),
+        'letter': letter,
+        'url': url
+    };
+
+    layer.attributes.target.data('layer', layer);
 
     return layer;
 };
