@@ -45,12 +45,13 @@ setup(name='seantis.dir.base',
           'collective.dexteritytextindexer',
           'xlrd',
           'xlwt',
-          'collective.geo.geographer>=1.6',
-          'collective.geo.contentlocations>=2.5',
-          'collective.geo.settings>=2.5',
-          'collective.geo.mapwidget>=1.6',
-          'collective.geo.openlayers>=2.5',
-          'collective.geo.kml>=2.5'
+          'collective.geo.geographer>=2.0b1',
+          'collective.geo.contentlocations>=3.0b1',
+          'collective.geo.settings>=3.0b1',
+          'collective.geo.mapwidget>=2.0b1',
+          'collective.geo.openlayers>=3.0b1',
+          'collective.geo.kml>=3.0b1',
+          'collective.geo.behaviour>=1.0b2'
       ],
       tests_require=tests_require,
       extras_require=dict(tests=tests_require),
